--- a/app/views/admin/agendas/index.html.erb
+++ b/app/views/admin/agendas/index.html.erb
@@ -15,7 +15,7 @@
   <table class="table table-striped table-bordered admin-grid">
     <thead>
       <tr>
-        <th><%= Agenda.human_attribute_name(:index) %></th>
+        <th><%= Agenda.human_attribute_name(:position) %></th>
         <th><%= Agenda.human_attribute_name(:status) %></th>
         <th><%= t('.change_status') %></th>
         <th><%= t(:remove) %></th>
