--- a/app/views/admin/agendas/edit.html.erb
+++ b/app/views/admin/agendas/edit.html.erb
@@ -1,11 +1,23 @@
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
-  <div class="headline">
-    <h1><%= t('agenda.edit') %></h1>
-  </div>
+<div class="headline">
+  <h1><%= t('.title') %></h1>
+</div>
 
-  <%= render 'form' %>
+<div class="col-md-2 col-sm-12">
+  <%= link_to t('.all'), admin_agendas_path, class: 'btn secondary' %>
+</div>
 
-  <hr>
+<div class="col-md-10 col-sm-12">
+  <%= render 'form', agenda: @agenda %>
+</div>
 
-  <%= link_to t('agenda.admin'), admin_agendas_path, class: 'btn secondary' %>
+<div class="headline">
+  <h3><%= t('.items') %></h3>
+</div>
+
+<div class="col-md-2 col-sm-12">
+
+</div>
+
+<div class="col-md-10 col-sm-12">
+  <%= render '/admin/agenda_items/table', agenda: @agenda, items: @agenda.items %>
 </div>
