--- a/app/views/admin/agendas/new.html.erb
+++ b/app/views/admin/agendas/new.html.erb
@@ -1,11 +1,12 @@
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
-  <div class="headline">
-    <h1><%= t('agenda.new') %></h1>
-  </div>
+<div class="headline">
+  <h1><%= t('.title') %></h1>
+</div>
 
-  <%= render 'form' %>
+<div class="col-md-2 col-sm-12">
+  <%= link_to(t('.all_agendas'),
+              admin_agendas_path, class: 'btn secondary') %>
+</div>
 
-  <hr>
-
-  <%= link_to t('agenda.admin'), admin_agendas_path, class: 'btn secondary' %>
+<div class="col-md-10 col-sm-12">
+  <%= render 'form', agenda: @agenda %>
 </div>
