--- a/app/views/admin/current_agendas/destroy.js.erb
+++ b/app/views/admin/current_agendas/destroy.js.erb
@@ -1,7 +1,7 @@
 <% if @success %>
   $('tr#<%= dom_id(@agenda) %> td.state').html('<%= j agenda_current_link(@agenda) %>');
   $('tr#<%= dom_id(@agenda) %>').removeClass('highlight');
-  $('tr#<%= dom_id(@agenda) %> td.status').html('<%= j agenda_status_str(@agenda.status) %>');
+  $('tr#<%= dom_id(@agenda) %> td.status').html('<%= j agenda_status(@agenda) %>');
 <% else %>
   $('tr#<%= dom_id(@agenda) %> td.state').html('<%= j agenda_close_link(@agenda) %>');
   $('tr#<%= dom_id(@agenda) %> td.state').append('<br><%= t('agenda.state.short_closed_error') %>');
