--- a/app/views/agendas/index.html.erb
+++ b/app/views/agendas/index.html.erb
@@ -10,7 +10,7 @@
         <%= agenda_link(agenda) %>
       </h4>
       <span class="badge">
-        <%= agenda_status_str(agenda.current_status) %>
+        <%= agenda_status(agenda) %>
       </span>
       <p class="list-group-item-text">
         <% if agenda.children.present? %>
